get all products and init for payment method endpoint
